# educational

./: .gitignore  CMakeLists.txt  c_make_commands_for_testing.sh  main.cpp  move_semantics_demo_setup.sh  move_semantics_lib.cpp  move_semantics_lib.h
tests/: move_semantics_tests.cpp  move_semantics_tests2.cpp
